--- a/.gitconfig
+++ b/.gitconfig
@@ -78,6 +78,7 @@
 			git commit --amend -m \"$(git log -1 --pretty=%B)\n\nCloses #$1.\"; \
 		fi \
 	}; f"
+	co = checkout
 
 [apply]
 
@@ -193,3 +194,5 @@
 
   helper = GIT_CREDENTIAL_HELPER
 
+[github]
+	user = codisredding
